# test-opencl

./: CMakeLists.txt  README.md
src/: matrix-mul-kernel.cl  matrix-mul.c
